# Raspberry-Voice-AI-Assistant

./: .gitignore  README.md  pyproject.toml  run.py
http/: flusk.py  index.html  webserver.py
http/template/: index.html
src/: button.py  generate_ai_response.py  main.py  text_to_speech.py  tg_bot.py  voice_to_text.py  voice_to_text_vosk.py
