[tool.poetry]
name = "aiy-voice-assistant"
version = "0.1.0"
description = ""
authors = ["Ansar Nurzhanov <nansarik@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.0"
vosk = "^0.3.45"
sounddevice = "^0.4.6"
urllib3 = "1.25.11"
speechrecognition = "3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
